[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/components/Record.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/SoundOptionsPanel.gd" type="Script" id=2]
[ext_resource path="res://scenes/components/SliderValue.tscn" type="PackedScene" id=3]

[node name="RecordOptionsPanel" type="Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -150.0
margin_top = -162.0
margin_right = 150.0
margin_bottom = -65.0
script = ExtResource( 2 )

[node name="ScrollUI" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="UI" type="VBoxContainer" parent="ScrollUI"]
margin_right = 268.0
margin_bottom = 123.0
size_flags_horizontal = 3

[node name="TrimValue" parent="ScrollUI/UI" instance=ExtResource( 3 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 0.0
margin_right = 268.0
margin_bottom = 19.0
value_name = "Trim"
default_value = 10000.0
max_value = 32768.0

[node name="Tempo" parent="ScrollUI/UI" instance=ExtResource( 1 )]
anchor_right = 0.0
margin_top = 23.0
margin_right = 268.0
margin_bottom = 45.0
rect_pivot_offset = Vector2( -566, -251 )
text = "Tempo"

[node name="Taches" parent="ScrollUI/UI" instance=ExtResource( 1 )]
anchor_right = 0.0
margin_top = 49.0
margin_right = 268.0
margin_bottom = 71.0
rect_pivot_offset = Vector2( -566, -251 )
text = "TÃ¢ches"

[node name="PuDeTemps" parent="ScrollUI/UI" instance=ExtResource( 1 )]
anchor_right = 0.0
margin_top = 75.0
margin_right = 268.0
margin_bottom = 97.0
rect_pivot_offset = Vector2( -566, -251 )
text = "Temps"

[node name="HS" parent="ScrollUI/UI" instance=ExtResource( 1 )]
anchor_right = 0.0
margin_top = 101.0
margin_right = 268.0
margin_bottom = 123.0
rect_pivot_offset = Vector2( -566, -251 )
text = "HS"

[node name="CRA" parent="ScrollUI/UI" instance=ExtResource( 1 )]
visible = false
anchor_right = 0.0
margin_top = 96.0
margin_right = 268.0
margin_bottom = 116.0
text = "CRA"

[connection signal="sound_updated" from="ScrollUI/UI/Tempo" to="." method="_on_Tempo_sound_updated"]
[connection signal="sound_updated" from="ScrollUI/UI/Taches" to="." method="_on_Taches_sound_updated"]
[connection signal="sound_updated" from="ScrollUI/UI/PuDeTemps" to="." method="_on_PuDeTemps_sound_updated"]
[connection signal="sound_updated" from="ScrollUI/UI/HS" to="." method="_on_HS_sound_updated"]
[connection signal="sound_updated" from="ScrollUI/UI/CRA" to="." method="_on_CRA_sound_updated"]
